app-items-front/front-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-oc-items-front-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-app-oc-items-front
spec:
  hosts:
  - "*"
  gateways:
  - app-oc-items-front-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    - uri:
        prefix: /stylesheets
    - uri:
        prefix: /images
    - uri:
        prefix: /js    
    route:
    - destination:
        host: app-oc-items-front
